--- a/src/style/index.css
+++ b/src/style/index.css
@@ -13,7 +13,9 @@ code {
 }
 
 
-
+nav{
+  text-align: center;
+}
 
 img{
   height: 100px;
@@ -33,5 +35,6 @@ img{
   margin: 10px;
   height: 300px;
   background-color: lightsalmon;
-  padding-left: 20px;
+  padding-left: 30px;
+  color: white;
 }
