--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,56 @@
-.character{
-  flex-grow: 1;
-  width: 300px;
-  margin: 10px;
-  height: 300px;
-  background-color:orangered;
-  padding-left: 30px;
-  color: white;
-  align-content: center;
-  display: inline-block;
-  vertical-align: top;
+html{
+  background-color: gray;
 }
+
+.box{
+  background-color: rebeccapurple;
+  min-height: 100px;
+  width: 500px;
+  color:white;
+}
+
+.theOtherBox{
+  background-color: rebeccapurple;
+  min-height: 100px;
+  width: 500px;
+  color:orange;
+}
+
 .App {
   text-align: center;
 }
 
-img{
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  height: 100px;
-  width: 100px;
-  padding-left: 10px;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.wrapper {
-  align-content: center;
-  position: relative;
-  display: inline-flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 20px;
+.App-link {
+  color: #61dafb;
 }
 
-
-
-
-
-
-
-
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
