--- a/src/style/index.css
+++ b/src/style/index.css
@@ -13,4 +13,11 @@ code {
 }
 
 
-
+.highStock{
+  background-color: blue;
+  color: white;
+}
+.lowStock{
+  background-color: red;
+  color: white;
+}
